force-app/main/default/objects/Job_Submission__c/Job_Submission__c.object-meta.xml
<CustomObject>
    <label>Job Submission</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Job Submission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>