force-app/main/default/objects/Job_Submission__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <inlineHelpText>Enter the Name of Account Manager</inlineHelpText>
    <label>Account Manager</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>