force-app/main/default/objects/Job_Submission__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <inlineHelpText>Enter Consultant Email Address</inlineHelpText>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>