force-app/main/default/objects/Job_Submission__c/fields/Interview_Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Schedule_Date__c</fullName>
    <label>Interview Schedule Date</label>
    <type>DateTime</type>
</CustomField>