force-app/main/default/objects/Job_Submission__c/fields/Interview_Status__c.field-meta.xml
<CustomField>
    <fullName>Interview_Status__c</fullName>
    <inlineHelpText>Choose Interview Status</inlineHelpText>
    <label>Interview Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>