force-app/main/default/objects/Job_Submission__c/fields/Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Choose the Appropriate Job to apply</inlineHelpText>
    <label>Job ID</label>
    <referenceTo>Job_Posting__c</referenceTo>
    <relationshipLabel>Job Submissions</relationshipLabel>
    <relationshipName>Job_Submissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>