force-app/main/default/objects/Job_Submission__c/fields/Job_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Job_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Submitted</label>
    <type>Checkbox</type>
</CustomField>