force-app/main/default/objects/Job_Submission__c/fields/Placement_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Placement_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Placement Confirmed</label>
    <type>Checkbox</type>
</CustomField>