force-app/main/default/objects/Job_Submission__c/fields/Placement_Status__c.field-meta.xml
<CustomField>
    <fullName>Placement_Status__c</fullName>
    <inlineHelpText>Choose the Status</inlineHelpText>
    <label>Placement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Placement Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>