force-app/main/default/objects/Job_Submission__c/fields/Sales_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team_Member__c</fullName>
    <inlineHelpText>Enter the Name of Sales Team Member</inlineHelpText>
    <label>Sales Team Member</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>