force-app/main/default/objects/Job_Submission__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <inlineHelpText>Enter Skills</inlineHelpText>
    <label>Skills</label>
    <length>100</length>
    <type>Text</type>
</CustomField>