force-app/main/default/objects/Job_Submission__c/fields/Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>Submitted_On__c</fullName>
    <inlineHelpText>Enter Current Submitted Date</inlineHelpText>
    <label>Submitted On</label>
    <required>true</required>
    <type>Date</type>
</CustomField>