force-app/main/default/objects/Job_Submission__c/fields/Talent_Bench_ID__c.field-meta.xml
<CustomField>
    <fullName>Talent_Bench_ID__c</fullName>
    <label>Talent Bench ID</label>
    <referenceTo>Talent_Bench__c</referenceTo>
    <relationshipLabel>Job Submissions</relationshipLabel>
    <relationshipName>Job_Submissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>