force-app/main/default/objects/Job_Submission__c/validationRules/Interview_Schedule_Date_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Interview_Schedule_Date_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISCHANGED(Interview_Schedule_Date__c),
    PRIORVALUE(Interview_Schedule_Date__c) &gt;= (NOW() - (1/1440)),
    Interview_Schedule_Date__c &lt; (NOW() - (1/1440))
)</errorConditionFormula>
    <errorDisplayField>Interview_Schedule_Date__c</errorDisplayField>
    <errorMessage>Cannot enter past date</errorMessage>
</ValidationRule>