force-app/main/default/objects/Job_Submission__c/validationRules/Submitted_On_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Submitted_On_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
Submitted_On__c &lt;&gt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Submitted_On__c</errorDisplayField>
    <errorMessage>Select current date</errorMessage>
</ValidationRule>